# video-wakeword-remover

./: README.md  pyproject.toml
Formula/: wakeword-remover.rb
wakeword-remover/: main.py  pyproject.toml
wakeword_remover/: __init__.py  cli.py
